--- a/01_UserInterface（前端界面）/FOPS.Blazor/wwwroot/layuiAdmin.v1.2.1 std/layuiAdmin.v1.2.1 std/views/component/layer/list.html
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/wwwroot/layuiAdmin.v1.2.1 std/layuiAdmin.v1.2.1 std/views/component/layer/list.html
@@ -322,7 +322,7 @@
         });
       }
       ,test18: function(){
-        layer.tips('我是另外一个tips，只不过我长得跟之前那位稍有些不一样。', this, {
+        layer.tips('我是另外一个tips，只不过我长得跟之前那位稍有些不一样。我是另外一个tips，只不过我长得跟之前那位稍有些不一样。<br />我是另外一个tips，只不过我长得跟之前那位稍有些不一样。我是另外一个tips，只不过我长得跟之前那位稍有些不一样。我是另外一个tips，只不过我长得跟之前那位稍有些不一样。', this, {
           tips: [3, '#2F9688'],
           time: 4000
         });
